1과제/경북1과제/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsi-ingress
  namespace: wsi
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsi-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-05e291de4eba1e815, subnet-0db1402b5b074d3f6
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
    alb.ingress.kubernetes.io/security-groups: sg-0c5bc99318f9c0e5d
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/customer/
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 80
      - path: /v1/product/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /v1/order/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
